# internal/delivery/http/dto/auth_dto.go
@@ -27,3 +27,7 @@ type TokenResponse struct {
 type RefreshRequest struct {
 	RefreshToken string `json:"refresh_token" validate:"required"`
 }
+
+type ResendVerificationRequest struct {
+	Email string `json:"email" validate:"required,email"`
+}
